--- a/css/settings.css
+++ b/css/settings.css
@@ -91,6 +91,14 @@
 	display: none;
 }
 
+::marker {
+	color: var(--color5);
+}
+
+.detail-summary {
+	margin-bottom: 10px;
+}
+
 @media only screen and (max-width: 700px) {
 	.sidebar {
 		width: 35%;
